<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="45dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingBottom="25dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="30dp">

                    <com.poshrite.helper.CustomTextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/welcome_to"
                        android:textColor="@color/pink"
                        android:textSize="27sp"
                        custom:font="GOTHIC_NORMAL.TTF" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <com.poshrite.helper.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="4dp"
                            android:paddingLeft="4dp"
                            android:paddingTop="4dp"
                            android:text="@string/posh"
                            android:textColor="@color/pink"
                            android:textSize="43sp"
                            custom:font="GOTHIC_NORMAL.TTF" />

                        <com.poshrite.helper.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="4dp"
                            android:paddingRight="4dp"
                            android:paddingTop="4dp"
                            android:text="@string/rite"
                            android:textColor="@color/pale_turquoise"
                            android:textSize="43sp"
                            custom:font="GOTHIC_NORMAL.TTF" />
                    </LinearLayout>


                    <com.poshrite.helper.CustomTextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/are_you_ready"
                        android:textColor="@color/light_gray"
                        android:textSize="20sp"
                        custom:font="GOTHIC_NORMAL.TTF" />

                    <com.poshrite.helper.CustomTextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/lets_get_started"
                        android:textColor="@color/light_gray"
                        android:textSize="20sp"
                        custom:font="GOTHIC_NORMAL.TTF" />>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sign_up_background"
                android:orientation="vertical"
                android:visibility="visible">


                <LinearLayout

                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/login_background"
                    android:orientation="vertical"
                    android:paddingTop="5dp">


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/login_background"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="35dp"

                            android:minHeight="50dp"
                            android:orientation="horizontal">


                        </LinearLayout>
                        <!--For bottom Who you are-->

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="20dp"
                            android:orientation="horizontal"
                            android:weightSum="3.0">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.95"
                                android:gravity="center"
                                android:minHeight="20dp"
                                android:orientation="vertical"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp">


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.1"
                                android:gravity="center"
                                android:minHeight="20dp"
                                android:orientation="vertical">

                                <com.poshrite.helper.CustomTextView
                                    android:id="@+id/textWhoYouAre"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:paddingBottom="2dp"
                                    android:paddingLeft="2dp"
                                    android:paddingTop="2dp"
                                    android:text="@string/choose_who_you_are"
                                    android:textColor="@color/medium_gray"
                                    android:textSize="15sp"
                                    custom:font="GOTHIC_NORMAL.TTF" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.95"
                                android:gravity="center"
                                android:minHeight="20dp"
                                android:orientation="vertical"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp">


                            </LinearLayout>


                            <!--For bottom two buttons-->

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:minHeight="60dp"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp">

                                <LinearLayout
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent"
                                    android:background="@color/pink">


                                    <RelativeLayout
                                        android:layout_width="fill_parent"
                                        android:layout_height="fill_parent"
                                        android:layout_centerVertical="true"
                                        android:layout_gravity="center_horizontal">

                                        <RelativeLayout
                                            android:id="@+id/imageComb"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_centerHorizontal="true"

                                            android:layout_gravity="center_horizontal">

                                            <ImageView

                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:padding="3dp"
                                                android:src="@drawable/beauty_enthusiast" />
                                        </RelativeLayout>

                                        <com.poshrite.helper.CustomTextView
                                            android:layout_width="fill_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_below="@+id/imageComb"
                                            android:gravity="center"
                                            android:paddingBottom="5dp"
                                            android:paddingLeft="2dp"
                                            android:paddingTop="2dp"
                                            android:text="@string/beauty_enthusiaist"
                                            android:textColor="@color/white"
                                            android:textSize="14sp"
                                            custom:font="GOTHIC_NORMAL.TTF" />
                                    </RelativeLayout>

                                </LinearLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:minHeight="60dp"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp">

                                <LinearLayout
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent"
                                    android:background="@color/pale_turquoise">

                                    <RelativeLayout
                                        android:layout_width="fill_parent"
                                        android:layout_height="fill_parent"
                                        android:layout_centerVertical="true"
                                        android:layout_gravity="center_horizontal">

                                        <RelativeLayout
                                            android:id="@+id/imageChair"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_centerHorizontal="true"
                                            android:layout_gravity="center_horizontal">

                                            <ImageView

                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:padding="3dp"
                                                android:src="@drawable/chair" />
                                        </RelativeLayout>

                                        <com.poshrite.helper.CustomTextView
                                            android:layout_width="fill_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_below="@+id/imageChair"
                                            android:gravity="center"
                                            android:paddingBottom="5dp"
                                            android:paddingLeft="2dp"
                                            android:paddingTop="2dp"
                                            android:text="@string/beauty_professional"
                                            android:textColor="@color/white"
                                            android:textSize="14sp"
                                            custom:font="GOTHIC_NORMAL.TTF" />
                                    </RelativeLayout>

                                </LinearLayout>
                            </LinearLayout>


                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
